Change class start

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 
     <properties>
-        <start-class>br.com.plusoftomni.OmniIntegrationPlatformApplication</start-class>
+        <start-class>br.com.plusoftomni.integration.OmniIntegrationPlatformApplication</start-class>
     </properties>
 
     <dependencies>
